improved the nav UI to stop horizontal scroll on mobile

--- a/client/css/booking.css
+++ b/client/css/booking.css
@@ -3,7 +3,7 @@
     max-width: 900px;
     margin: 50px auto;
 }
-.book-steps{
+.booking-steps{
     margin-block: 60px;
     overflow-y: scroll;
     max-height: 90%;
@@ -27,10 +27,10 @@
 }
 
 @media (max-width: 720px) {
-    .cta-btn {
+    .cta {
         width: auto;
     }
-    .cta-btn{
+    .booking-steps .cta-btn{
         min-width: 150px;
     }
 }
