--- a/client/css/dashboard.css
+++ b/client/css/dashboard.css
@@ -159,7 +159,7 @@ main{
 }
 .greeting h2{
     padding-left: 25px;
-    font-size: 1.47rem;
+    font-size: 1.1rem;
     font-weight: 700;
 }
 
